# DocRider

./: .gitignore  CMakeLists.txt  Global.hpp  Logger.cpp  Logger.hpp  README.md  main.cpp
Doc/: Notes.txt  PIV_URL.txt
UI/: DlgEditMachine.cpp  DlgEditMachine.hpp  DlgEditMachine.ui  MainWindow.hpp  MainWindow.ui
